--- a/contributors/21800412.md
+++ b/contributors/21800412.md
@@ -1,5 +1,3 @@
-Our midterm exam
-date is wed, 18, april
-time is 8:30 pm~10:30pm
-place is NTH 412
-thank you!
+date : Wed 17, april
+time : 8:30pm~10:30pm
+place : NTH412
